[gd_scene load_steps=8 format=2]

[ext_resource path="res://props/BaseProp.tscn" type="PackedScene" id=1]
[ext_resource path="res://tilemaps/props.tres" type="TileSet" id=2]
[ext_resource path="res://props/ObeliskBig.gd" type="Script" id=3]
[ext_resource path="res://sound/creepy-ambient-7539.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7678, 7.28912 )

[sub_resource type="CircleShape2D" id=2]
radius = 150.581

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.5427, 21.9167 )

[node name="BaseProp" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Shadow" parent="." index="0"]
position = Vector2( -12, 23 )
tile_data = PoolIntArray( -131072, 10, 0 )

[node name="Props" parent="." index="1"]
position = Vector2( -16, -69 )
tile_data = PoolIntArray( 0, 5, 0 )

[node name="StaticBody2D" parent="." index="2"]
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="TileMapLetters" type="TileMap" parent="." index="3"]
modulate = Color( 1.5, 0, 1.5, 1 )
position = Vector2( -16, -5 )
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -65536, 6, 0 )

[node name="AreaLetter" type="Area2D" parent="." index="4"]
position = Vector2( 0, -14 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLetter" index="0"]
position = Vector2( 0, 14 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="AreaLetter" index="1"]
position = Vector2( 0, 14 )
stream = ExtResource( 4 )
attenuation = 0.203063

[node name="GemArea" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GemArea" index="0"]
position = Vector2( 0, 30 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="." index="6"]
margin_left = 13.2433
margin_top = -55.6218
margin_right = 53.2433
margin_bottom = -41.6218
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="AreaLetter" to="." method="_on_AreaLetter_body_entered"]
[connection signal="body_exited" from="AreaLetter" to="." method="_on_AreaLetter_body_exited"]
[connection signal="body_entered" from="GemArea" to="." method="_on_GemArea_body_entered"]
[connection signal="body_exited" from="GemArea" to="." method="_on_GemArea_body_exited"]
